plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '1.16.0'
}

group 'org.jusecase'
version '2.1.2'

sourceCompatibility = 17

repositories {
    mavenCentral()
}

dependencies {
    testImplementation group: 'junit', name: 'junit', version: '4.13.1'
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    version = '2023.2'
    plugins = ['java', 'Kotlin']
}

patchPluginXml {
    untilBuild = providers.provider({ null })
}

publishPlugin {
    token = System.getenv('ORG_GRADLE_PROJECT_intellijPublishToken')
}

apply plugin: 'idea'
idea {
    module {
        sourceDirs += file('src/main/gen')
        generatedSourceDirs += file('src/main/gen')
    }
}